[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
config = "0.15.18"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
